# menuconfig

./: CMakeLists.txt  README.md  conf.c  confdata.c  zconf.tab.c
lxdialog/: CMakeLists.txt  dialog.h  dialog.h~
test/: rootconf
